--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,4 +1,7 @@
 {
+  "app": {
+    "CSV Import+Export": "CSV Import+Export"
+  },
   "importExport": {
     "Auto-detect": "Auto-detect",
     "Other": "Other",
@@ -10,8 +13,9 @@
       "Delimiter is invalid": "Delimiter is invalid"
     },
     "Export": {
-      "Export result": "Export result",
-      "Large file export is not supported": "Large file export is not supported"
+      "Large file export is not supported": "Large file export is not supported",
+      "Export to CSV": "Export to CSV",
+      "Export result": "Export result"
     },
     "SourceInput": {
       "Import type": "Import type",
@@ -35,6 +39,20 @@
     "BottomBar": {
       "About": "About"
     }
+  },
+  "about": {
+    "Go back": "Go back",
+    "Github logo": "Github logo",
+    "EmEditor localized homepage [URL]": "https://www.emeditor.com/",
+    "EmEditor logo": "EmEditor logo",
+    "EmEditor description [paragraph]": "EmEditor is a text editor which features CSV editing tools and large file support. <1>Try EmEditor for free.</1>",
+    "Report bugs/send feedback": "Report bugs/send feedback",
+    "For bug reports, please attach the log file:": "For bug reports, please attach the log file:",
+    "Save log": "Save log",
+    "How to send feedback [paragraph]": "There are two ways to submit bug reports or feedback:<br><1>Via the contact form ↗</1><br><2>Issues page of the GitHub repo ↗</2>",
+    "License info": "License info",
+    "CSV Import+Export is licensed under the MIT License.": "CSV Import+Export is licensed under the MIT License.",
+    "Third party libraries [paragraph]": "A huge thank you goes to <1>Papa Parse</1> for their open-source CSV parser. CSV Import+Export also uses the following third-party libraries:"
   },
   "store": {
     "Your version of Excel is not supported": "Your version of Excel is not supported",
