--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -29,6 +29,7 @@
   "about": {
     "Go back": "Go back",
     "Github logo": "Github logo",
+    "CSV Import+Export on Github": "CSV Import+Export on Github",
     "EmEditor localized homepage [URL]": "https://www.emeditor.com/",
     "EmEditor logo": "EmEditor logo",
     "EmEditor description [paragraph]": "EmEditor is a text editor which features CSV editing tools and large file support. <1>Try EmEditor for free.</1>",
