--- a/src/locale/blank.json
+++ b/src/locale/blank.json
@@ -30,16 +30,16 @@
     "Go back": "",
     "Github logo": "",
     "CSV Import+Export on Github": "",
-    "EmEditor localized homepage [URL]": "https://www.emeditor.com/",
+    "EmEditor localized homepage [URL]": "",
     "EmEditor logo": "",
-    "EmEditor description [paragraph]": "EmEditor is a text editor which features CSV editing tools and large file support. <1>Try EmEditor for free.</1>",
+    "EmEditor description [paragraph]": "",
     "Report bugs/send feedback": "",
     "For bug reports, please attach the log file:": "",
     "Save log": "",
-    "How to send feedback [paragraph]": "There are two ways to submit bug reports or feedback:<br><1>Via the contact form ↗</1><br><2>Issues page of the GitHub repo ↗</2>",
+    "How to send feedback [paragraph]": "",
     "License info": "",
     "CSV Import+Export is licensed under the MIT License.": "",
-    "Third party libraries [paragraph]": "A huge thank you goes to <1>Papa Parse</1> for their open-source CSV parser. CSV Import+Export also uses the following third-party libraries:"
+    "Third party libraries [paragraph]": ""
   },
   "store": {
     "Your version of Excel is not supported": "",
