--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -41,6 +41,11 @@
     "CSV Import+Export is licensed under the MIT License.": "CSV Import+Export is licensed under the MIT License.",
     "Third party libraries [paragraph]": "A huge thank you goes to <1>Papa Parse</1> for their open-source CSV parser. CSV Import+Export also uses the following third-party libraries:"
   },
+  "licenseInformation": {
+    "License information": "License information",
+    "CSV Import+Export is licensed under the MIT License.": "CSV Import+Export is licensed under the MIT License.",
+    "CSV Import+Export uses the following third-party libraries.": "CSV Import+Export uses the following third-party libraries."
+  },
   "store": {
     "Your version of Excel is not supported": "Your version of Excel is not supported",
     "Session has expired; please refresh the page.": "Session has expired; please refresh the page."
