--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -25,6 +25,7 @@
     "Export type": "Export type",
     "Textbox": "Textbox",
     "Stop": "Stop",
+    "Stopping...": "Stopping...",
     "About": "About"
   },
   "about": {
