--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -5,15 +5,8 @@
   "importExport": {
     "Auto-detect": "Auto-detect",
     "Other": "Other",
-    "Excel API is not initialized": "Excel API is not initialized",
-    "Save options": "Save options",
     "Import CSV": "Import CSV",
     "Export CSV": "Export CSV",
-    "Import source is not selected": "Import source is not selected",
-    "Delimiter is invalid": "Delimiter is invalid",
-    "Large file export is not supported": "Large file export is not supported",
-    "Export to CSV": "Export to CSV",
-    "Export result": "Export result",
     "Import type": "Import type",
     "File": "File",
     "Text input": "Text input",
@@ -25,12 +18,19 @@
     "Export type": "Export type",
     "Textbox": "Textbox",
     "Stop": "Stop",
-    "Stopping...": "Stopping...",
+    "Stopping": "Stopping",
+    "Export to CSV": "Export to CSV",
+    "Export result": "Export result",
+    "Excel API is not initialized": "Excel API is not initialized",
+    "Import source is not selected": "Import source is not selected",
+    "Delimiter is invalid": "Delimiter is invalid",
+    "Large file export is not supported": "Large file export is not supported",
+    "Save options": "Save options",
     "About": "About"
   },
   "about": {
     "Go back": "Go back",
-    "Github logo": "Github logo",
+    "GitHub logo": "GitHub logo",
     "CSV Import+Export on Github": "CSV Import+Export on Github",
     "EmEditor localized homepage [URL]": "https://www.emeditor.com/",
     "EmEditor logo": "EmEditor logo",
