--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,7 +1,4 @@
 {
-  "app": {
-    "CSV Import+Export": "CSV Import+Export"
-  },
   "importExport": {
     "Auto-detect": "Auto-detect",
     "Other": "Other",
@@ -30,18 +27,16 @@
   },
   "about": {
     "Go back": "Go back",
+    "CSV Import+Export": "CSV Import+Export",
     "GitHub logo": "GitHub logo",
-    "CSV Import+Export on Github": "CSV Import+Export on Github",
-    "EmEditor localized homepage [URL]": "https://www.emeditor.com/",
+    "CSV Import+Export on GitHub": "CSV Import+Export on GitHub",
     "EmEditor logo": "EmEditor logo",
-    "EmEditor description [paragraph]": "EmEditor is a text editor which features CSV editing tools and large file support. <1>Try EmEditor for free.</1>",
+    "EmEditor description [paragraph]": "EmEditor is a text editor which features a CSV editing interface and large file support. <1>Try EmEditor for free.</1>",
+    "EmEditor localized homepage [URL]": "https://www.emeditor.com/",
     "Report bugs/send feedback": "Report bugs/send feedback",
     "For bug reports, please attach the log file:": "For bug reports, please attach the log file:",
     "Save log": "Save log",
-    "How to send feedback [paragraph]": "There are two ways to submit bug reports or feedback:<br><1>Via the contact form ↗</1><br><2>Issues page of the GitHub repo ↗</2>",
-    "License info": "License info",
-    "CSV Import+Export is licensed under the MIT License.": "CSV Import+Export is licensed under the MIT License.",
-    "Third party libraries [paragraph]": "A huge thank you goes to <1>Papa Parse</1> for their open-source CSV parser. CSV Import+Export also uses the following third-party libraries:"
+    "How to send feedback [paragraph]": "There are two ways to submit bug reports or feedback:<br><1>Via the contact form ↗</1><br><2>Issues page of the GitHub repo ↗</2>"
   },
   "licenseInformation": {
     "License information": "License information",
