--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,18 +1,9 @@
 {
-  "app": {
-    "CSV Import+Export": "CSV Import+Export"
-  },
   "importExport": {
     "Auto-detect": "Auto-detect",
     "Other": "Other",
-    "Excel API is not initialized": "Excel API is not initialized",
-    "Save options": "Save options",
     "Import CSV": "Import CSV",
-    "Import source is not selected": "Import source is not selected",
-    "Delimiter is invalid": "Delimiter is invalid",
-    "Large file export is not supported": "Large file export is not supported",
-    "Export to CSV": "Export to CSV",
-    "Export result": "Export result",
+    "Export CSV": "Export CSV",
     "Import type": "Import type",
     "File": "File",
     "Text input": "Text input",
@@ -24,22 +15,33 @@
     "Export type": "Export type",
     "Textbox": "Textbox",
     "Stop": "Stop",
+    "Stopping": "Stopping",
+    "Export to CSV": "Export to CSV",
+    "Export result": "Export result",
+    "Excel API is not initialized": "Excel API is not initialized",
+    "Import source is not selected": "Import source is not selected",
+    "Delimiter is invalid": "Delimiter is invalid",
+    "Large file export is not supported": "Large file export is not supported",
+    "Save options": "Save options",
     "About": "About"
   },
   "about": {
     "Go back": "Go back",
-    "Github logo": "Github logo",
-    "CSV Import+Export on Github": "CSV Import+Export on Github",
-    "EmEditor localized homepage [URL]": "https://www.emeditor.com/",
+    "CSV Import+Export": "CSV Import+Export",
+    "GitHub logo": "GitHub logo",
+    "CSV Import+Export on GitHub": "CSV Import+Export on GitHub",
     "EmEditor logo": "EmEditor logo",
-    "EmEditor description [paragraph]": "EmEditor is a text editor which features CSV editing tools and large file support. <1>Try EmEditor for free.</1>",
+    "EmEditor description [paragraph]": "EmEditor is a text editor which features a CSV editing interface and large file support. <1>Try EmEditor for free.</1>",
+    "EmEditor localized homepage [URL]": "https://www.emeditor.com/",
     "Report bugs/send feedback": "Report bugs/send feedback",
     "For bug reports, please attach the log file:": "For bug reports, please attach the log file:",
     "Save log": "Save log",
-    "How to send feedback [paragraph]": "There are two ways to submit bug reports or feedback:<br><1>Via the contact form ↗</1><br><2>Issues page of the GitHub repo ↗</2>",
-    "License info": "License info",
+    "How to send feedback [paragraph]": "There are two ways to submit bug reports or feedback:<br><1>Via the contact form ↗</1><br><2>Issues page of the GitHub repo ↗</2>"
+  },
+  "licenseInformation": {
+    "License information": "License information",
     "CSV Import+Export is licensed under the MIT License.": "CSV Import+Export is licensed under the MIT License.",
-    "Third party libraries [paragraph]": "A huge thank you goes to <1>Papa Parse</1> for their open-source CSV parser. CSV Import+Export also uses the following third-party libraries:"
+    "CSV Import+Export uses the following third-party libraries.": "CSV Import+Export uses the following third-party libraries."
   },
   "store": {
     "Your version of Excel is not supported": "Your version of Excel is not supported",
