--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -41,7 +41,7 @@
   "licenseInformation": {
     "License information": "License information",
     "CSV Import+Export is licensed under the MIT License.": "CSV Import+Export is licensed under the MIT License.",
-    "CSV Import+Export uses the following third-party libraries.": "CSV Import+Export uses the following third-party libraries."
+    "Third-party licenses [paragraph]": "We would like to thank <1>Papa Parse</1> for their CSV parser. CSV Import+Export also uses the following third-party libraries."
   },
   "store": {
     "Your version of Excel is not supported": "Your version of Excel is not supported",
