--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -31,7 +31,7 @@
     "GitHub logo": "GitHub logo",
     "CSV Import+Export on GitHub": "CSV Import+Export on GitHub",
     "EmEditor logo": "EmEditor logo",
-    "EmEditor description [paragraph]": "EmEditor is a text editor which features a CSV editing interface and large file support. <1>Try EmEditor for free.</1>",
+    "EmEditor description [paragraph]": "EmEditor is a text editor which features a CSV editing interface and large file support. <1>Try EmEditor for free. ↗</1>",
     "EmEditor localized homepage [URL]": "https://www.emeditor.com/",
     "Report bugs/send feedback": "Report bugs/send feedback",
     "For bug reports, please attach the log file:": "For bug reports, please attach the log file:",
