--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1,6 +1,7 @@
 {
   "importExport": {
-    "CSV Import+Export makes it easy to add CSV data to Excel. For help, click on the question mark to open the help page.": "CSV Import+Export makes it easy to add CSV data to Excel. For help, click on the question mark to open the help page.",
+    "CSV Import+Export makes it easy to add CSV data to Excel. If you need any help, the \"?\" icon in the top right corner will take you to the help page.": "CSV Import+Export makes it easy to add CSV data to Excel. If you need any help, the \"?\" icon in the top right corner will take you to the help page.",
+    "Continue": "Continue",
     "Help page": "Help page",
     "Auto-detect": "Auto-detect",
     "Other": "Other",
